--- a/app/src/main/res/layout/fragment_frag_menu.xml
+++ b/app/src/main/res/layout/fragment_frag_menu.xml
@@ -4,11 +4,17 @@
     android:layout_height="match_parent"
     tools:context="dream_team.distri_app.UI.Frag_menu">
 
+        <ImageButton
+            android:id="@+id/btn_add"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="57dp"
+            android:src="@drawable/ic_add_24dp"
+            android:background="@drawable/roundedbutton"
+            android:padding="1dp"
+            android:layout_gravity="right|bottom"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:id="@+id/btn_add"
-        android:layout_gravity="right|bottom" />
 </FrameLayout>
