--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="#0066FF" />
-    <corners android:radius="50dp"
-        android:bottomRightRadius="50dp"
-        android:bottomLeftRadius="50dp"
-        android:topRightRadius="50dp"
-        android:topLeftRadius="50dp"
-        />
+
 </shape>
