--- a/app/src/main/res/layout/fragment_frag_event.xml
+++ b/app/src/main/res/layout/fragment_frag_event.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dream_team.distri_app.UI.Frag_menu">
+    tools:context="dream_team.distri_app.UI.Frag_event">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Frag_Menu" />
+        android:text="Frag_Event" />
 
     <ImageButton
         android:id="@+id/btn_add"
@@ -23,4 +23,5 @@
         android:layout_marginRight="25dp"
         android:layout_gravity="right|bottom"
         />
+
 </FrameLayout>
