--- a/app/src/main/res/layout/fragment_frag__create_user.xml
+++ b/app/src/main/res/layout/fragment_frag__create_user.xml
@@ -18,10 +18,11 @@
             android:id="@+id/textView" />
 
         <TextView
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Username below"
+            android:text="Username"
             android:id="@+id/textView2" />
 
         <EditText
@@ -30,10 +31,11 @@
             android:id="@+id/edtUsername" />
 
         <TextView
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Password below"
+            android:text="Password"
             android:id="@+id/textView3" />
 
         <EditText
@@ -42,6 +44,14 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/edtPassword1" />
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Confirm Password"
+            android:id="@+id/textView4" />
 
         <EditText
             android:layout_width="wrap_content"
