--- a/app/src/main/res/layout/fragment_frag__create_user.xml
+++ b/app/src/main/res/layout/fragment_frag__create_user.xml
@@ -51,10 +51,14 @@
             android:id="@+id/edtPassword2" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Submit User"
-            android:id="@+id/btnSubmit" />
+            android:id="@+id/btnSubmit"
+            android:background="@drawable/roundedges"
+            android:textColor="#FFFFFF"
+            android:layout_margin="5dp"
+            />
 
     </LinearLayout>
 </FrameLayout>
