--- a/app/src/main/res/layout/fragment_frag_menu.xml
+++ b/app/src/main/res/layout/fragment_frag_menu.xml
@@ -4,11 +4,22 @@
     android:layout_height="match_parent"
     tools:context="dream_team.distri_app.UI.Frag_menu">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:divider="#B7B7B7"
+        />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Frag_Menu" />
+        android:id="@+id/textViewListe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="#ffffff"
+        android:textSize="30px"
+        />
 
     <ImageButton
         android:id="@+id/btn_add"
