--- a/app/src/main/res/drawable/roundedges.xml
+++ b/app/src/main/res/drawable/roundedges.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#000000" android:endColor="#000000"  />
+            <stroke android:width="1dip" android:color="#FFFFFF" />
+            <gradient android:angle="-90" android:startColor="#FFFFFF" android:endColor="#FFFFFF" />
         </shape>
     </item>
     <item android:state_focused="true">
@@ -14,7 +14,7 @@
             <solid android:color="#000000"/>
         </shape>
     </item>
-    <item >
+    <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
             <stroke android:width="1dip" android:color="#0066FF" />
