--- a/app/src/main/res/layout/fragment_frag__create_user.xml
+++ b/app/src/main/res/layout/fragment_frag__create_user.xml
@@ -28,7 +28,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edtUsername" />
+            android:id="@+id/edtUsername"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <TextView
             android:layout_marginTop="5dp"
@@ -43,7 +45,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/edtPassword1" />
+            android:id="@+id/edtPassword1"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <TextView
             android:layout_marginTop="5dp"
@@ -58,7 +62,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/edtPassword2" />
+            android:id="@+id/edtPassword2"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <Button
             android:layout_width="match_parent"
