--- a/app/src/main/res/layout/fragment_frag__login.xml
+++ b/app/src/main/res/layout/fragment_frag__login.xml
@@ -22,7 +22,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/edtUsername" />
+            android:id="@+id/edtUsername"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,7 +38,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/edtPassword" />
+            android:id="@+id/edtPassword"
+            android:singleLine="true"
+            android:lines="1"/>
 
         <Button
             android:layout_width="match_parent"
