--- a/app/src/main/res/layout/fragment_frag_room.xml
+++ b/app/src/main/res/layout/fragment_frag_room.xml
@@ -10,6 +10,17 @@
         android:layout_height="match_parent"
         android:text="Frag_Room" />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/txtV"
+        android:layout_gravity="center" />
+
+
+
     <ImageButton
         android:id="@+id/btn_add"
         android:layout_width="65dp"
@@ -23,4 +34,7 @@
         android:layout_marginRight="25dp"
         android:layout_gravity="right|bottom"
         />
+
+
+
 </FrameLayout>
