--- a/app/src/main/res/layout/fragment_frag__create_user.xml
+++ b/app/src/main/res/layout/fragment_frag__create_user.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Create User"
-            android:id="@+id/textView" />
+            android:id="@+id/txtVCreateUserHead" />
 
         <TextView
             android:layout_marginTop="5dp"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Username"
-            android:id="@+id/textView2" />
+            android:id="@+id/txtVUserName" />
 
         <EditText
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Password"
-            android:id="@+id/textView3" />
+            android:id="@+id/txtVPassword" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Confirm Password"
-            android:id="@+id/textView4" />
+            android:id="@+id/txtVConPassword" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Email"
-            android:id="@+id/textView5" />
+            android:id="@+id/txtVEmail" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="First Name"
-            android:id="@+id/textView6" />
+            android:id="@+id/txtvFirstName" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Last Name"
-            android:id="@+id/textView7" />
+            android:id="@+id/txtVLastName" />
 
         <EditText
             android:layout_width="wrap_content"
