--- a/app/src/main/res/layout/fragment_frag_event.xml
+++ b/app/src/main/res/layout/fragment_frag_event.xml
@@ -11,7 +11,7 @@
         android:text="Frag_Event" />
 
     <ImageButton
-        android:id="@+id/btn_add"
+        android:id="@+id/btn_addEvent"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:background="@drawable/roundedbutton"
