--- a/app/src/main/res/layout/fragment_frag_event.xml
+++ b/app/src/main/res/layout/fragment_frag_event.xml
@@ -5,6 +5,14 @@
     tools:context="dream_team.distri_app.UI.Frag_event">
 
     <!-- TODO: Update blank fragment layout -->
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:divider="#B7B7B7"
+        />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
